# keep

./: .env.example  .firebaserc  .gitignore  .prettierignore  Plan.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: android-test.yml  ci.yml  release-native.yml  release-vscode.yml
apps/keep-desktop/: README.md  index.html  package.json
apps/keep-desktop/src/: main.ts  styles.css
apps/keep-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/keep-desktop/src-tauri/capabilities/: android.json  default.json
apps/keep-desktop/src-tauri/icons/: icon.icns
apps/keep-desktop/src-tauri/src/: lib.rs  main.rs
apps/vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  SUPPORT.md  package.json  tsconfig.json
apps/vscode-extension/scripts/: release.sh
apps/vscode-extension/src/: auth.ts  client.ts  clipboard-tree.ts  clipboard.ts  config.ts  crypto.ts  events.ts  extension.ts  password-entry.test.ts  password-entry.ts  passwords-tree.ts  pull.ts  push-plan.test.ts  push-plan.ts  push.ts  selection.ts  status-bar.ts  tree.ts  unlock.ts  vault-session.ts
apps/vscode-extension/walkthrough/: pull-push.md  select.md  sign-in.md
apps/website/: next.config.ts  package.json
apps/website/app/: globals.css  layout.tsx  page.tsx
apps/website/lib/: api-response.ts  (+22 more)
docs/: architecture.md  custom-totp-mfa.md  device-authorization.md  firebase-free-tier.md  master-plan.md  native-releases.md  passwords.md  redis-storage.md  threat-model.md  vscode-integration.md
(+70 files in other folders)
