[package]
name = "keep-desktop"
version = "0.1.0"
description = "Keep Clipboard — menu-bar clipboard sync"
authors = ["Keep"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't clash with the bin
# on Windows — see https://github.com/rust-lang/cargo/issues/8519
name = "keep_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
